packages/base/data/test/error/cabecadeboi-neigh-line-invalid1.gpm
1 cabecadeboi900.shp cabecadeboi900.shp distance 
 	  
C00L01 900 C00L02 1800 C01L00 900 C01L01 1272.792 C02L00 1800
